--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 			<figure>
 				<div>
 					<a href="homme-body-editorial/#HOMME_BODY_Editorial_1--Shot_by_Phi_Vu">
-						<img loading="lazy" src="assets/images/homme-body/editorial/HOMME_BODY_Editorial_1--Shot_by_Phi_Vu.webp">
+						<img src="assets/images/homme-body/editorial/HOMME_BODY_Editorial_1--Shot_by_Phi_Vu.webp">
 					</a>
 				</div>
 				<figcaption></figcaption>
@@ -201,7 +201,7 @@
 			<figure>
 				<div>
 					<a href="homme-body-editorial/#HOMME_BODY_Editorial_2--Shot_by_Phi_Vu">
-						<img loading="lazy" src="assets/images/homme-body/editorial/HOMME_BODY_Editorial_2--Shot_by_Phi_Vu.webp">
+						<img src="assets/images/homme-body/editorial/HOMME_BODY_Editorial_2--Shot_by_Phi_Vu.webp">
 					</a>
 				</div>
 				<figcaption></figcaption>
@@ -209,7 +209,7 @@
 			<figure>
 				<div>
 					<a href="homme-body-editorial/#HOMME_BODY_Editorial_3--Shot_by_Phi_Vu">
-						<img loading="lazy" src="assets/images/homme-body/editorial/HOMME_BODY_Editorial_3--Shot_by_Phi_Vu.webp">
+						<img src="assets/images/homme-body/editorial/HOMME_BODY_Editorial_3--Shot_by_Phi_Vu.webp">
 					</a>
 				</div>
 				<figcaption></figcaption>
@@ -217,7 +217,7 @@
 			<figure>
 				<div>
 					<a href="homme-body-editorial/#HOMME_BODY_Editorial_4--Shot_by_Phi_Vu">
-						<img loading="lazy" src="assets/images/homme-body/editorial/HOMME_BODY_Editorial_4--Shot_by_Phi_Vu.webp">
+						<img src="assets/images/homme-body/editorial/HOMME_BODY_Editorial_4--Shot_by_Phi_Vu.webp">
 					</a>
 				</div>
 				<figcaption></figcaption>
@@ -225,7 +225,7 @@
 			<figure>
 				<div>
 					<a href="homme-body-editorial/#HOMME_BODY_Editorial_5--Shot_by_Didier_Osias">
-						<img loading="lazy" src="assets/images/homme-body/editorial/HOMME_BODY_Editorial_5--Shot_by_Didier_Osias.webp">
+						<img src="assets/images/homme-body/editorial/HOMME_BODY_Editorial_5--Shot_by_Didier_Osias.webp">
 					</a>
 				</div>
 				<figcaption></figcaption>
@@ -233,7 +233,7 @@
 			<figure>
 				<div>
 					<a href="homme-body-editorial/#HOMME_BODY_Editorial_6--Shot_by_Didier_Osias">
-						<img loading="lazy" src="assets/images/homme-body/editorial/HOMME_BODY_Editorial_6--Shot_by_Didier_Osias.webp">
+						<img src="assets/images/homme-body/editorial/HOMME_BODY_Editorial_6--Shot_by_Didier_Osias.webp">
 					</a>
 				</div>
 				<figcaption></figcaption>
@@ -241,7 +241,7 @@
 			<figure>
 				<div>
 					<a href="homme-body-editorial/#HOMME_BODY_Editorial_7--Shot_by_Didier_Osias">
-						<img loading="lazy" src="assets/images/homme-body/editorial/HOMME_BODY_Editorial_7--Shot_by_Didier_Osias.webp">
+						<img src="assets/images/homme-body/editorial/HOMME_BODY_Editorial_7--Shot_by_Didier_Osias.webp">
 					</a>
 				</div>
 				<figcaption></figcaption>
@@ -249,7 +249,7 @@
 			<figure>
 				<div>
 					<a href="homme-body-editorial/#HOMME_BODY_Editorial_8--Shot_by_Didier_Osias">
-						<img loading="lazy" src="assets/images/homme-body/editorial/HOMME_BODY_Editorial_8--Shot_by_Didier_Osias.webp">
+						<img src="assets/images/homme-body/editorial/HOMME_BODY_Editorial_8--Shot_by_Didier_Osias.webp">
 					</a>
 				</div>
 				<figcaption></figcaption>
@@ -257,7 +257,7 @@
 			<figure>
 				<div>
 					<a href="homme-body-editorial/#HOMME_BODY_Editorial_9--Shot_by_Didier_Osias">
-						<img loading="lazy" src="assets/images/homme-body/editorial/HOMME_BODY_Editorial_9--Shot_by_Didier_Osias.webp">
+						<img src="assets/images/homme-body/editorial/HOMME_BODY_Editorial_9--Shot_by_Didier_Osias.webp">
 					</a>
 				</div>
 				<figcaption></figcaption>
@@ -265,7 +265,7 @@
 			<figure>
 				<div>
 					<a href="homme-body-editorial/#HOMME_BODY_Editorial_10--Shot_by_Phi_Vu">
-						<img loading="lazy" src="assets/images/homme-body/editorial/HOMME_BODY_Editorial_10--Shot_by_Phi_Vu.webp">
+						<img src="assets/images/homme-body/editorial/HOMME_BODY_Editorial_10--Shot_by_Phi_Vu.webp">
 					</a>
 				</div>
 				<figcaption></figcaption>
@@ -273,7 +273,7 @@
 			<figure>
 				<div>
 					<a href="homme-body-editorial/#HOMME_BODY_Editorial_11--Shot_by_Phi_Vu">
-						<img loading="lazy" src="assets/images/homme-body/editorial/HOMME_BODY_Editorial_11--Shot_by_Phi_Vu.webp">
+						<img src="assets/images/homme-body/editorial/HOMME_BODY_Editorial_11--Shot_by_Phi_Vu.webp">
 					</a>
 				</div>
 				<figcaption></figcaption>
@@ -281,7 +281,7 @@
 			<figure>
 				<div>
 					<a href="homme-body-editorial/#HOMME_BODY_Editorial_12--Shot_by_Phi_Vu">
-						<img loading="lazy" src="assets/images/homme-body/editorial/HOMME_BODY_Editorial_12--Shot_by_Phi_Vu.webp">
+						<img src="assets/images/homme-body/editorial/HOMME_BODY_Editorial_12--Shot_by_Phi_Vu.webp">
 					</a>
 				</div>
 				<figcaption></figcaption>
@@ -289,7 +289,7 @@
 			<figure>
 				<div>
 					<a href="homme-body-editorial/#Cortez_Derby_1_in_collaboration_with_Batrachotoxin">
-						<img loading="lazy" src="assets/images/homme-body/editorial/Cortez_Derby_1_in_collaboration_with_Batrachotoxin.webp">
+						<img src="assets/images/homme-body/editorial/Cortez_Derby_1_in_collaboration_with_Batrachotoxin.webp">
 					</a>
 				</div>
 				<figcaption></figcaption>
@@ -297,7 +297,7 @@
 			<figure>
 				<div>
 					<a href="homme-body-editorial/#Cortez_Derby_1_in_collaboration_with_Batrachotoxin">
-						<img loading="lazy" src="assets/images/homme-body/editorial/Cortez_Derby_2_in_collaboration_with_Batrachotoxin.webp">
+						<img src="assets/images/homme-body/editorial/Cortez_Derby_2_in_collaboration_with_Batrachotoxin.webp">
 					</a>
 				</div>
 				<figcaption></figcaption>
@@ -314,7 +314,7 @@
 			<figure>
 				<div>
 					<a href="homme-body-lookbook/#HOMME_BODY_Look_1_Black_Double-Breasted_Jacket_with_Black_Double_Pleated_Trousers--Shot_by_Phi_Vu">
-						<img loading="lazy" src="assets/images/homme-body/lookbook/HOMME_BODY_Look_1_Black_Double-Breasted_Jacket_with_Black_Double_Pleated_Trousers--Shot_by_Phi_Vu.webp">
+						<img src="assets/images/homme-body/lookbook/HOMME_BODY_Look_1_Black_Double-Breasted_Jacket_with_Black_Double_Pleated_Trousers--Shot_by_Phi_Vu.webp">
 					</a>
 				</div>
 				<figcaption></figcaption>
@@ -322,7 +322,7 @@
 			<figure>
 				<div>
 					<a href="homme-body-lookbook/#HOMME_BODY_Look_2_Navy_Y-Collar_Double-Breasted_Jacket_with_Navy_CF_Pleated_Trousers--Shot_by_Phi_Vu">
-						<img loading="lazy" src="assets/images/homme-body/lookbook/HOMME_BODY_Look_2_Navy_Y-Collar_Double-Breasted_Jacket_with_Navy_CF_Pleated_Trousers--Shot_by_Phi_Vu.webp">
+						<img src="assets/images/homme-body/lookbook/HOMME_BODY_Look_2_Navy_Y-Collar_Double-Breasted_Jacket_with_Navy_CF_Pleated_Trousers--Shot_by_Phi_Vu.webp">
 					</a>
 				</div>
 				<figcaption></figcaption>
@@ -330,7 +330,7 @@
 			<figure>
 				<div>
 					<a href="homme-body-lookbook/#HOMME_BODY_Look_3_Navy_Military_Ike_Jacket_with_Black_Flared_Trousers--Shot_by_Phi_Vu">
-						<img loading="lazy" src="assets/images/homme-body/lookbook/HOMME_BODY_Look_3_Navy_Military_Ike_Jacket_with_Black_Flared_Trousers--Shot_by_Phi_Vu.webp">
+						<img src="assets/images/homme-body/lookbook/HOMME_BODY_Look_3_Navy_Military_Ike_Jacket_with_Black_Flared_Trousers--Shot_by_Phi_Vu.webp">
 					</a>
 				</div>
 				<figcaption></figcaption>
@@ -338,7 +338,7 @@
 			<figure>
 				<div>
 					<a href="homme-body-lookbook/#HOMME_BODY_Look_4_Black_Dropped_Shoulder_Single-Breasted_Jacket_with_Black_Double_Pleated_Trousers--Shot_by_Phi_Vu">
-						<img loading="lazy" src="assets/images/homme-body/lookbook/HOMME_BODY_Look_4_Black_Dropped_Shoulder_Single-Breasted_Jacket_with_Black_Double_Pleated_Trousers--Shot_by_Phi_Vu.webp">
+						<img src="assets/images/homme-body/lookbook/HOMME_BODY_Look_4_Black_Dropped_Shoulder_Single-Breasted_Jacket_with_Black_Double_Pleated_Trousers--Shot_by_Phi_Vu.webp">
 					</a>
 				</div>	
 				<figcaption></figcaption>
@@ -346,7 +346,7 @@
 			<figure>
 				<div>
 					<a href="homme-body-lookbook/#HOMME_BODY_Look_5_Black_One-Button_Flannel_Jacket_with_Black_Silk-Waistband_Belt_Trousers--Shot_by_Phi_Vu">
-						<img loading="lazy" src="assets/images/homme-body/lookbook/HOMME_BODY_Look_5_Black_One-Button_Flannel_Jacket_with_Black_Silk-Waistband_Belt_Trousers--Shot_by_Phi_Vu.webp">
+						<img src="assets/images/homme-body/lookbook/HOMME_BODY_Look_5_Black_One-Button_Flannel_Jacket_with_Black_Silk-Waistband_Belt_Trousers--Shot_by_Phi_Vu.webp">
 					</a>
 				</div>
 				<figcaption></figcaption>
@@ -354,7 +354,7 @@
 			<figure>
 				<div>
 					<a href="homme-body-lookbook/#HOMME_BODY_Look_6_Black_Alpaca_Wool_Sweater_with_Black_Silk-Waistband_Belt_Trousers--Shot_by_Phi_Vu">
-						<img loading="lazy" src="assets/images/homme-body/lookbook/HOMME_BODY_Look_6_Black_Alpaca_Wool_Sweater_with_Black_Silk-Waistband_Belt_Trousers--Shot_by_Phi_Vu.webp">
+						<img src="assets/images/homme-body/lookbook/HOMME_BODY_Look_6_Black_Alpaca_Wool_Sweater_with_Black_Silk-Waistband_Belt_Trousers--Shot_by_Phi_Vu.webp">
 					</a>
 				</div>
 				<figcaption></figcaption>
@@ -362,7 +362,7 @@
 			<figure>
 				<div>
 					<a href="homme-body-lookbook/#HOMME_BODY_Look_7_Navy_Alpaca_Wool_Sweater_with_Black_CF_Pleated_Trousers--Shot_by_Phi_Vu">
-						<img loading="lazy" src="assets/images/homme-body/lookbook/HOMME_BODY_Look_7_Navy_Alpaca_Wool_Sweater_with_Black_CF_Pleated_Trousers--Shot_by_Phi_Vu.webp">
+						<img src="assets/images/homme-body/lookbook/HOMME_BODY_Look_7_Navy_Alpaca_Wool_Sweater_with_Black_CF_Pleated_Trousers--Shot_by_Phi_Vu.webp">
 					</a>
 				</div>
 				<figcaption></figcaption>
@@ -370,7 +370,7 @@
 			<figure>
 				<div>
 					<a href="homme-body-lookbook/#HOMME_BODY_Look_8_White_Cotton_Undershirt_with_Black_Double_Pleated_Shorts--Shot_by_Phi_Vu">
-						<img loading="lazy" src="assets/images/homme-body/lookbook/HOMME_BODY_Look_8_White_Cotton_Undershirt_with_Black_Double_Pleated_Shorts--Shot_by_Phi_Vu.webp">
+						<img src="assets/images/homme-body/lookbook/HOMME_BODY_Look_8_White_Cotton_Undershirt_with_Black_Double_Pleated_Shorts--Shot_by_Phi_Vu.webp">
 					</a>
 				</div>
 				<figcaption></figcaption>
@@ -387,7 +387,7 @@
 			<figure>
 				<div>
 					<a href="#">
-						<img loading="lazy" src="assets/images/homme-body/portfolio/Pattern-making-Development-1.webp">
+						<img src="assets/images/homme-body/portfolio/Pattern-making-Development-1.webp">
 					</a>
 				</div>
 				<figcaption></figcaption>
@@ -395,7 +395,7 @@
 			<figure>
 				<div>
 					<a href="#">
-						<img loading="lazy" src="assets/images/homme-body/portfolio/Pattern-making-Development-2.webp">
+						<img src="assets/images/homme-body/portfolio/Pattern-making-Development-2.webp">
 					</a>
 				</div>
 				<figcaption></figcaption>
@@ -403,7 +403,7 @@
 			<figure>
 				<div>
 					<a href="#">
-						<img loading="lazy" src="assets/images/homme-body/portfolio/Pattern-making-Development-3.webp">
+						<img src="assets/images/homme-body/portfolio/Pattern-making-Development-3.webp">
 					</a>
 				</div>
 				<figcaption></figcaption>
@@ -411,7 +411,7 @@
 			<figure>
 				<div>
 					<a href="#">
-						<img loading="lazy" src="assets/images/homme-body/portfolio/Pattern-making-Development-4.webp">
+						<img src="assets/images/homme-body/portfolio/Pattern-making-Development-4.webp">
 					</a>
 				</div>
 				<figcaption></figcaption>
@@ -419,7 +419,7 @@
 			<figure>
 				<div>
 					<a href="#">
-						<img loading="lazy" src="assets/images/homme-body/portfolio/Pattern-making-Development-5.webp">
+						<img src="assets/images/homme-body/portfolio/Pattern-making-Development-5.webp">
 					</a>
 				</div>
 				<figcaption></figcaption>
@@ -427,7 +427,7 @@
 			<figure>
 				<div>
 					<a href="#">
-						<img loading="lazy" src="assets/images/homme-body/portfolio/Pattern-making-Development-6.webp">
+						<img src="assets/images/homme-body/portfolio/Pattern-making-Development-6.webp">
 					</a>
 				</div>
 				<figcaption></figcaption>
@@ -435,7 +435,7 @@
 			<figure>
 				<div>
 					<a href="#">
-						<img loading="lazy" src="assets/images/homme-body/portfolio/Fitting-Process-1.webp">
+						<img src="assets/images/homme-body/portfolio/Fitting-Process-1.webp">
 					</a>
 				</div>
 				<figcaption></figcaption>
@@ -443,7 +443,7 @@
 			<figure>
 				<div>
 					<a href="#">
-						<img loading="lazy" src="assets/images/homme-body/portfolio/Fitting-Process-2.webp">
+						<img src="assets/images/homme-body/portfolio/Fitting-Process-2.webp">
 					</a>
 				</div>
 				<figcaption></figcaption>
@@ -451,7 +451,7 @@
 			<figure>
 				<div>
 					<a href="#">
-						<img loading="lazy" src="assets/images/homme-body/portfolio/Fitting-Process-3.webp">
+						<img src="assets/images/homme-body/portfolio/Fitting-Process-3.webp">
 					</a>
 				</div>
 				<figcaption></figcaption>
@@ -459,7 +459,7 @@
 			<figure>
 				<div>
 					<a href="#">
-						<img loading="lazy" src="assets/images/homme-body/portfolio/Fitting-Process-4.webp">
+						<img src="assets/images/homme-body/portfolio/Fitting-Process-4.webp">
 					</a>
 				</div>
 				<figcaption></figcaption>
@@ -467,7 +467,7 @@
 			<figure>
 				<div>
 					<a href="#">
-						<img loading="lazy" src="assets/images/homme-body/portfolio/Fitting-Process-5.webp">
+						<img src="assets/images/homme-body/portfolio/Fitting-Process-5.webp">
 					</a>
 				</div>
 				<figcaption></figcaption>
@@ -475,7 +475,7 @@
 			<figure>
 				<div>
 					<a href="#">
-						<img loading="lazy" src="assets/images/homme-body/portfolio/Technical-Flats-(Bottoms).webp">
+						<img src="assets/images/homme-body/portfolio/Technical-Flats-(Bottoms).webp">
 					</a>
 				</div>
 				<figcaption></figcaption>
@@ -483,7 +483,7 @@
 			<figure>
 				<div>
 					<a href="#">
-						<img loading="lazy" src="assets/images/homme-body/portfolio/Technical-Flats-(Jackets-and-Shirt).webp">
+						<img src="assets/images/homme-body/portfolio/Technical-Flats-(Jackets-and-Shirt).webp">
 					</a>
 				</div>
 				<figcaption></figcaption>
@@ -501,7 +501,7 @@
 			<figure>
 				<div>
 					<a href="untitled-editorial-lookbook/#Untitled_2022_Editorial_1--Shot_by_Ashley_Zhang">
-						<img loading="lazy" src="assets/images/untitled/lookbook-editorial/Untitled,_2022_Editorial_1--Shot_by_Ashley_Zhang.webp">
+						<img src="assets/images/untitled/lookbook-editorial/Untitled,_2022_Editorial_1--Shot_by_Ashley_Zhang.webp">
 					</a>
 				</div>
 				<figcaption></figcaption>
@@ -509,7 +509,7 @@
 			<figure>
 				<div>
 					<a href="untitled-editorial-lookbook/#Untitled_2022_Editorial_2--Shot_by_Tommy_Park">
-						<img loading="lazy" src="assets/images/untitled/lookbook-editorial/Untitled,_2022_Editorial_2--Shot_by_Tommy_Park.webp">
+						<img src="assets/images/untitled/lookbook-editorial/Untitled,_2022_Editorial_2--Shot_by_Tommy_Park.webp">
 					</a>
 				</div>
 				<figcaption></figcaption>
@@ -517,7 +517,7 @@
 			<figure>
 				<div>
 					<a href="untitled-editorial-lookbook/#Untitled_2022_Editorial_3--Shot_by_Tommy_Park">
-						<img loading="lazy" src="assets/images/untitled/lookbook-editorial/Untitled,_2022_Editorial_3--Shot_by_Tommy_Park.webp">
+						<img src="assets/images/untitled/lookbook-editorial/Untitled,_2022_Editorial_3--Shot_by_Tommy_Park.webp">
 					</a>
 				</div>
 				<figcaption></figcaption>
@@ -525,7 +525,7 @@
 			<figure>
 				<div>
 					<a href="untitled-editorial-lookbook/#Untitled_2022_Editorial_4--Shot_by_Ashley_Zhang">
-						<img loading="lazy" src="assets/images/untitled/lookbook-editorial/Untitled,_2022_Editorial_4--Shot_by_Ashley_Zhang.webp">
+						<img src="assets/images/untitled/lookbook-editorial/Untitled,_2022_Editorial_4--Shot_by_Ashley_Zhang.webp">
 					</a>
 				</div>
 				<figcaption></figcaption>
@@ -533,7 +533,7 @@
 			<figure>
 				<div>
 					<a href="untitled-editorial-lookbook/#Untitled_2022_Editorial_5--Shot_by_Ashley_Zhang">
-						<img loading="lazy" src="assets/images/untitled/lookbook-editorial/Untitled,_2022_Editorial_5--Shot_by_Ashley_Zhang.webp">
+						<img src="assets/images/untitled/lookbook-editorial/Untitled,_2022_Editorial_5--Shot_by_Ashley_Zhang.webp">
 					</a>
 				</div>
 				<figcaption></figcaption>
@@ -541,7 +541,7 @@
 			<figure>
 				<div>
 					<a href="untitled-editorial-lookbook/#Untitled_2022_Editorial_6--Shot_by_Tommy_Park">
-						<img loading="lazy" src="assets/images/untitled/lookbook-editorial/Untitled,_2022_Editorial_6--Shot_by_Tommy_Park.webp">
+						<img src="assets/images/untitled/lookbook-editorial/Untitled,_2022_Editorial_6--Shot_by_Tommy_Park.webp">
 					</a>
 				</div>
 				<figcaption></figcaption>
