--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
     		max-width: 100%;
     		max-height: 100%;
   		}
-  		figure a:hover{
+  		/*figure a:hover{
   			filter: invert(100%) grayscale(100%) ;
-  		}
+  		}*/
 
 
 
