--- a/homme-body-editorial/index.html
+++ b/homme-body-editorial/index.html
@@ -31,7 +31,15 @@
 	<nav class="left">
 		<div>&nbsp;</div>
 		<div>
-			<h2><span>Collection</span></h2>
+			<h2>
+				<details>
+					<summary>Collection</summary>
+					<ul>
+						<li><a href="../homme-body-lookbook"><span class="arrRight">Homme Body, 2023</span>Lookbook</a></li>
+						<li><a href="../untitled-editorial-lookbook"><span class="arrRight">Untitled, 2022</span>Editorial&hairsp;/&hairsp;Lookbook</a></li>
+					</ul>
+				</details>
+			</h2>
 			<h3><span class="arrRight">Homme Body, 2023</span>Editorial</h3>
 		</div>
 		<div id="description">
