--- a/untitled-editorial-lookbook/index.html
+++ b/untitled-editorial-lookbook/index.html
@@ -31,7 +31,15 @@
 	<nav class="left">
 		<div>&nbsp;</div>
 		<div>
-			<h2><span>Collection</span></h2>
+			<h2>
+				<details>
+					<summary>Collection</summary>
+					<ul>
+						<li><a href="../homme-body-editorial"><span class="arrRight">Homme Body, 2023</span>Editorial</a></li>
+						<li><a href="../homme-body-lookbook"><span class="arrRight">Homme Body, 2023</span>Lookbook</a></li>
+					</ul>
+				</details>
+			</h2>
 			<h3><span class="arrRight">Homme Body, 2023</span>Editorial</h3>
 		</div>
 		<div id="description">
